2006-07-21  Thomas Wood  <thos@gnome.org>

	* engines/crux/src/crux-draw.c: (paint_progress_bar),
	(draw_shadow), (draw_box), (draw_extension), (draw_slider):

	- Improved colours for scroll and progress bars
	- Fix combobox focus line drawing

2006-07-21  Thomas Wood  <thos@gnome.org>

	* engines/lighthouseblue/*:
	* engines/metal/*:
	* themes/LighthouseBlue/*:
	* themes/Metal/*:
	
	Remove directories no longer used in build

2006-07-20  Thomas Wood  <thos@gnome.org>

	* configure.ac: Remove crux/pixmaps directory. Fixes bug 348167

2006-07-20  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* engines/crux/src/crux-draw.c: (draw_box_gap):
	* engines/lighthouseblue/src/lighthouseblue_style.c:
	(draw_box_gap):
	  fix drawing issues with box gaps at the end of a line.

2006-07-20  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* engines/crux/src/crux-draw.c: (draw_extension):
	* engines/lighthouseblue/src/lighthouseblue_style.c:
	(draw_extension):
	  Fix for new notebook dnd code. Both themes used the parent widget 
	  witholut checking for NULL before.

2006-07-18   Andrew Johnson <acjgenius@earthlink.net>

	* engines/hc/Makefile.am:
	* engines/hc/src/hc-main.c:
	* engines/hc/src/hc-rc-style.c:
	* engines/hc/src/hc-rc-style.h:
	* engines/hc/src/hc-style.c: (hc_draw_shadow), (hc_draw_extension),
	(hc_draw_check), (hc_draw_option), (hc_draw_tab),
	(hc_draw_shadow_gap), (hc_draw_arrow), (hc_draw_flat_box),
	(hc_draw_box_gap), (hc_draw_handle), (hc_draw_hline),
	(hc_draw_vline), (hc_draw_polygon):
	* engines/hc/src/hc-style.h:
	* engines/hc/src/hc_gtk2_drawing.h:
	* engines/hc/src/hc_gtk2_engine.c: (hc_rc_style_create_style),
	(hc_rc_style_class_init), (hc_rc_style_register_type),
	(hc_style_realize), (hc_style_class_init),
	(hc_style_register_type), (theme_init), (theme_exit),
	(theme_create_rc_style):
	* engines/hc/src/hc_gtk2_engine.h:
	* engines/hc/src/hc_gtk2_support.c: (hc_simple_border_gap_clip),
	(do_hc_draw_arrow), (do_hc_draw_line), (do_hc_draw_dot):